src/app.pcss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    @font-face {
        font-family: 'Firava';
        font-style: normal;
        font-weight: 400;
        font-display: swap;
        src: url(/fonts/fira/Firava.woff2) format('woff2');
    }
    @font-face {
        font-family: 'Pixelify Sans';
        font-style: normal;
        font-weight: 400;
        font-display: swap;
        src: url(/fonts/pixelify/PixelifySans-VariableFont_wght.ttf) format('truetype');
    }
	:root {
    --background: 214 31.8% 91.4%;
    --foreground: 240 10% 3.9%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;

    --primary: 206.05 100% 40.2%;
    --primary-foreground: 240 50.9% 10%;

    --secondary: 48.19 100% 62.16%;
    --secondary-foreground: 44.72 50.81% 15.31%;

    --accent: 11.91 100% 72.35%;
    --accent-foreground: 11.91 80% 40.35%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --ring: 240 5% 64.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;

    --ring: 240 3.7% 15.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings:
      "rlig" 1,
      "calt" 1;
  }
}

body {
  touch-action: pan-x pan-y;
}

